js/src/tests/test262/built-ins/Promise/reject/prop-desc.js
verifyNotEnumerable
(
Promise
'
reject
'
)
;
verifyWritable
(
Promise
'
reject
'
)
;
verifyConfigurable
(
Promise
'
reject
'
)
;
reportCompare
(
0
0
)
;
